--- a/resources/chef/cookbooks/apache2/templates/default/default-site.erb
+++ b/resources/chef/cookbooks/apache2/templates/default/default-site.erb
@@ -4,12 +4,12 @@
   DocumentRoot <%= node['apache']['docroot_dir'] %>/
   <Directory />
     Options FollowSymLinks
-    AllowOverride None
+    AllowOverride All
   </Directory>
 
   <Directory <%= node['apache']['docroot_dir'] %>/>
     Options Indexes FollowSymLinks MultiViews
-    AllowOverride None
+    AllowOverride All
     Order allow,deny
     Allow from all
   </Directory>
