--- a/resources/chef/cookbooks/deploycode/templates/default/config.erb
+++ b/resources/chef/cookbooks/deploycode/templates/default/config.erb
@@ -1,3 +1,4 @@
 Host bitbucket.org
-	HostName bitbucket.org
+	StrictHostKeyChecking no
+        HostName bitbucket.org
 	IdentityFile /root/.ssh/gitkey
