--- a/resources/chef/cookbooks/nginx/templates/default/default-site.erb
+++ b/resources/chef/cookbooks/nginx/templates/default/default-site.erb
@@ -6,6 +6,18 @@ server {
 
   location / {
     root   <%= node['nginx']['default_root'] %>;
-    index  index.html index.htm;
+    index index.php index.html index.htm;
+  }
+  location ~ \.php$ {
+    try_files $uri =404;
+    fastcgi_pass unix:/var/run/php-fpm-www.sock
+    fastcgi_index index.php;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    include fastcgi_params;
+  }
+  error_page 404 /404.html;
+  error_page 500 502 503 504 /50x.html;
+  location = /50x.html {
+    root   <%= node['nginx']['default_root'] %>;
   }
 }
