--- a/resources/chef/cookbooks/nginx/templates/default/default-site.erb
+++ b/resources/chef/cookbooks/nginx/templates/default/default-site.erb
@@ -10,7 +10,7 @@ server {
   }
   location ~ \.php$ {
     try_files $uri =404;
-    fastcgi_pass unix:/var/run/php-fpm-www.sock
+    fastcgi_pass unix:/var/run/php-fpm-www.sock;
     fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     include fastcgi_params;
