Config php-fpm cookbook

--- a/resources/chef/cookbooks/php-fpm/templates/default/pool.conf.erb
+++ b/resources/chef/cookbooks/php-fpm/templates/default/pool.conf.erb
@@ -35,6 +35,7 @@ listen = <%= @listen || "/var/run/php-fpm-#{@pool_name}.sock" %>
 ; Set listen(2) backlog.
 ; Default Value: 128 (-1 on FreeBSD and OpenBSD)
 ;listen.backlog = 128
+listen.backlog = -1
 
 ; Set permissions for unix socket, if one is used. In Linux, read/write
 ; permissions must be set in order to allow connections from a web server. Many
@@ -94,7 +95,7 @@ listen.allowed_clients = <%= @allowed_clients ? ([@allowed_clients].flatten.join
 ;             pm.process_idle_timeout   - The number of seconds after which
 ;                                         an idle process will be killed.
 ; Note: This value is mandatory.
-pm = <%= @process_manager || "ondemand" %>
+pm = <%= @process_manager || "dynamic" %>
 
 ; The number of child processes to be created when pm is set to 'static' and the
 ; maximum number of child processes when pm is set to 'dynamic' or 'ondemand'.
@@ -105,13 +106,13 @@ pm = <%= @process_manager || "ondemand" %>
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = <%= @max_children || 50 %>
+pm.max_children = <%= @max_children || 75 %>
 
 <% if @process_manager == "dynamic" %>
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
 ; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
-pm.start_servers = <%= @start_servers || 5 %>
+pm.start_servers = <%= @start_servers || 10 %>
 
 ; The desired minimum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
@@ -121,7 +122,7 @@ pm.min_spare_servers = <%= @min_spare_servers || 5 %>
 ; The desired maximum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.max_spare_servers = <%= @max_spare_servers || 35 %>
+pm.max_spare_servers = <%= @max_spare_servers || 20 %>
 <% end %>
 
 <% if @process_manager == "ondemand" %>
@@ -374,11 +375,11 @@ security.limit_extensions = <%=@security_limit_extensions || ".php" %>
 ; Pass environment variables like LD_LIBRARY_PATH. All $VARIABLEs are taken from
 ; the current environment.
 ; Default Value: clean env
-;env[HOSTNAME] = $HOSTNAME
-;env[PATH] = /usr/local/bin:/usr/bin:/bin
-;env[TMP] = /tmp
-;env[TMPDIR] = /tmp
-;env[TEMP] = /tmp
+env[HOSTNAME] = $HOSTNAME
+env[PATH] = /sbin:/usr/sbin:/opt/aws/bin:/usr/local/bin:/usr/bin:/bin
+env[TMP] = /tmp
+env[TMPDIR] = /tmp
+env[TEMP] = /tmp
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
@@ -400,10 +401,10 @@ security.limit_extensions = <%=@security_limit_extensions || ".php" %>
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
-;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/fpm-php.www.log
-;php_admin_flag[log_errors] = on
-;php_admin_value[memory_limit] = 512M
+php_flag[display_errors] = off
+php_admin_value[error_log] = /var/log/fpm-php.www.log
+php_admin_flag[log_errors] = on
+php_admin_value[memory_limit] = 512M
 
 <% @php_options.each do |name,value| %>
 <%= "#{name} = #{value}" %>
