--- a/resources/chef/cookbooks/nginx/templates/default/default-site.erb
+++ b/resources/chef/cookbooks/nginx/templates/default/default-site.erb
@@ -10,10 +10,13 @@ server {
   }
   location ~ \.php$ {
     try_files $uri =404;
+    root   <%= node['nginx']['default_root'] %>;
+    fastcgi_split_path_info ^(.+\.php)(/.+)$;
     fastcgi_pass unix:/var/run/php-fpm-www.sock;
     fastcgi_index index.php;
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME /opt/source/app/$fastcgi_script_name;
+    fastcgi_param  DOCUMENT_ROOT /opt/source/app/htdocs;
+    include /etc/nginx/fastcgi_params;
   }
   error_page 404 /404.html;
   error_page 500 502 503 504 /50x.html;
