--- a/resources/chef/cookbooks/microcache/templates/default/header.erb
+++ b/resources/chef/cookbooks/microcache/templates/default/header.erb
@@ -1,3 +1,14 @@
-fastcgi_cache_path /etc/nginx/cache levels=1:2 keys_zone=MYAPP:128m inactive=60m;
+fastcgi_cache_path /etc/nginx/cache levels=1:2 keys_zone=MYAPP:128m max_size=256M inactive=2h;
 fastcgi_cache_key "$scheme$request_method$host$request_uri";
 add_header X-Cache $upstream_cache_status;
+
+map $http_cookie $cache_uid {
+default nil; # hommage to Lisp :)
+~SESS[[:alnum:]]+=(?<session_id>[[:alnum:]]+) $session_id;
+}
+
+map $request_method $no_cache {
+default 1;
+HEAD 0;
+GET 0;
+}
