--- a/resources/chef/cookbooks/nginx/templates/default/default-site.erb
+++ b/resources/chef/cookbooks/nginx/templates/default/default-site.erb
@@ -1,29 +1,118 @@
 server {
-  listen   80;
   server_name  <%= node['hostname'] %>;
+  root   <%= node['nginx']['default_root'] %>;
+  access_log  <%= node['nginx']['log_dir'] %>/access.log;
+  error_log  <%= node['nginx']['log_dir'] %>/error.log;
 
-  access_log  <%= node['nginx']['log_dir'] %>/localhost.access.log;
+#Cache everything by default
+set $no_cache 0;
+#Don't cache POST requests
+if ($request_method = POST)
+{
+set $no_cache 1;
+}
+#Don't cache if the URL contains a query string
+if ($query_string != "")
+{    set $no_cache 1;
+}
+#Don't cache the following URLs
+if ($request_uri ~* "/(administrator/|login.php)")
+{
+set $no_cache 1;
+}
+#Don't cache if there is a cookie called PHPSESSID
+if ($http_cookie = "PHPSESSID")
+{
+set $no_cache 1;
+}
+
+  location = /favicon.ico {
+    log_not_found off;
+    access_log off;
+  }
+  location = /robots.txt {
+    allow all;
+    log_not_found off;
+    access_log off;
+  }
+
+  # This matters if you use drush
+  location = /backup {
+    deny all;
+  }
+
+  # Very rarely should these ever be accessed outside of your lan
+  location ~* \.(txt|log)$ {
+    deny all;
+  }
+
+  location ~ \..*/.*\.php$ {
+    return 403;
+  }
 
   location / {
-    root   <%= node['nginx']['default_root'] %>;
-    index index.php index.html index.htm;
+    # This is cool because no php is touched for static content
+    try_files $uri @rewrite;
+  }
+
+  location @rewrite {
+    # Some modules enforce no slash (/) at the end of the URL
+    # Else this rewrite block wouldn't be needed (GlobalRedirect)
+    rewrite ^/(.*)$ /index.php?q=$1;
   }
   location ~ \.php$ {
-    try_files $uri =404;
-    root   <%= node['nginx']['default_root'] %>;
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_intercept_errors on;
     fastcgi_pass unix:/var/run/php-fpm-www.sock;
-    fastcgi_index index.php;
-    fastcgi_param SCRIPT_FILENAME /opt/source/app/$fastcgi_script_name;
-    fastcgi_param  DOCUMENT_ROOT /opt/source/app/htdocs;
-    include /etc/nginx/fastcgi_params;
+
+    fastcgi_cache off;
+    fastcgi_cache_bypass $no_cache;
+    fastcgi_no_cache $no_cache;
+
+    # Set cache key to include identifying components
+    fastcgi_cache_key $cache_uid@$host$request_uri;
+
+    fastcgi_cache_valid 200 301 15s;
+    fastcgi_cache_valid 302     1m;
+    fastcgi_cache_valid 404     1s;
+    fastcgi_cache_min_uses 1;
+    fastcgi_cache_use_stale error timeout invalid_header updating http_500;
+    fastcgi_ignore_headers Cache-Control Expires;
+    fastcgi_pass_header Set-Cookie;
+    fastcgi_pass_header Cookie;
+
+    ## Add a cache miss/hit status header.
+    add_header X-Micro-Cache $upstream_cache_status;
+
+    ## To avoid any interaction with the cache control headers we expire
+    ## everything on this location immediately.
+    expires epoch;
+
+    ## Cache locking mechanism for protecting the backend of too many
+    ## simultaneous requests.
+    fastcgi_cache_lock on;
   }
-  error_page 404 /404.html;
-  error_page 500 502 503 504 /50x.html;
-  location = /50x.html {
-    root   <%= node['nginx']['default_root'] %>;
+
+  # Catch image styles for D7.
+  location ~ ^/sites/.*/files/ {
+    try_files $uri @rewrite;
   }
+
+  # Catch image styles for D7.
+  location ~ ^/sites/all/themes/ {
+    try_files $uri @rewrite;
+  }
+
+  # Catch image styles for AmazonS3 D7.
   location ~ ^/system/files/styles/ {
     try_files $uri @rewrite;
+  }
+
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    expires max;
+    log_not_found off;
   }
 }
