fix nginx cache_uid not found

--- a/resources/chef/cookbooks/microcache/templates/default/header.erb
+++ b/resources/chef/cookbooks/microcache/templates/default/header.erb
@@ -1,4 +1,4 @@
-fastcgi_cache_path /dev/shm/microcache levels=1:2 keys_zone=microcache:5M max_size=256M inactive=2h;
+fastcgi_cache_path /dev/shm/microcache levels=1:2 keys_zone=MYAPP:5M max_size=256M inactive=2h;
 fastcgi_cache_key "$scheme$request_method$host$request_uri";
 add_header X-Cache $upstream_cache_status;
 
