--- a/resources/chef/cookbooks/microcache/templates/default/locationphp.erb
+++ b/resources/chef/cookbooks/microcache/templates/default/locationphp.erb
@@ -1,3 +1,3 @@
     fastcgi_cache MYAPP;
-    fastcgi_cache_valid 200 60m;
+    fastcgi_cache_valid 200 301 15s;
     fastcgi_cache_bypass $no_cache;fastcgi_no_cache $no_cache;
