Run mongo installation by script instead of yum

--- a/resources/chef/cookbooks/php/templates/default/php.ini.erb
+++ b/resources/chef/cookbooks/php/templates/default/php.ini.erb
@@ -981,7 +981,7 @@ default_socket_timeout = 60
 ;extension=php_xmlrpc.dll
 ;extension=php_xsl.dll
 ;extension=php_zip.dll
-
+extension=mongo.so
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
 ;;;;;;;;;;;;;;;;;;;
