--- a/resources/chef/cookbooks/nginx/templates/default/default-site.erb
+++ b/resources/chef/cookbooks/nginx/templates/default/default-site.erb
@@ -48,7 +48,7 @@ server {
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_intercept_errors on;
     fastcgi_pass unix:/var/run/php-fpm-www.sock;
-
+    fastcgi_read_timeout 40;
 
 
     # Set cache key to include identifying components
