--- a/resources/chef/cookbooks/nginx/templates/default/default-site.erb
+++ b/resources/chef/cookbooks/nginx/templates/default/default-site.erb
@@ -92,4 +92,9 @@ server {
     expires max;
     log_not_found off;
   }
+
+  location ~* \.(eot|ttf|woff|svg) {
+    add_header Access-Control-Allow-Origin *;
+    try_files $uri @rewrite;
+  }
 }
