Modify php apc in chef Cookbook

--- a/resources/chef/cookbooks/php/templates/default/apc.ini.erb
+++ b/resources/chef/cookbooks/php/templates/default/apc.ini.erb
@@ -1,7 +1,7 @@
 extension=apc.so
 apc.enabled=1
 apc.shm_segments=1
-apc.shm_size=128M
+apc.shm_size="128M"
 
 ;Relative to the number of cached files (you may need to watch your stats for a day or two to find out a good number)
 apc.num_files_hint=7000
@@ -25,7 +25,7 @@ apc.stat=0
 apc.include_once_override=0
 
 ;Only set to 1 while debugging
-apc.enable_cli=0
+apc.enable_cli="off"
 
 ;Allow 2 seconds after a file is created before it is cached to prevent users from seeing half-written/weird pages
 apc.file_update_protection=2
