--- a/resources/chef/cookbooks/php/templates/default/php.ini.erb
+++ b/resources/chef/cookbooks/php/templates/default/php.ini.erb
@@ -1895,6 +1895,7 @@ ldap.max_links = -1
 ; tab-width: 4
 ; End:
 
+cgi.fix_pathinfo=0
 <% @directives.sort_by { |key, val| key }.each do |directive, value| -%>
 <%= "#{directive}=\"#{value}\"" %>
 <% end -%>
