working for kybot + docker update

--- a/resources/chef/cookbooks/deploycode/templates/default/config.erb
+++ b/resources/chef/cookbooks/deploycode/templates/default/config.erb
@@ -1,4 +1,4 @@
-Host bitbucket.org
+Host gitlab.kybot.io
 	StrictHostKeyChecking no
-        HostName bitbucket.org
+        HostName gitlab.kybot.io
 	IdentityFile /root/.ssh/gitkey
