--- a/resources/chef/cookbooks/docker/templates/default/sysvinit/docker-rhel.erb
+++ b/resources/chef/cookbooks/docker/templates/default/sysvinit/docker-rhel.erb
@@ -24,7 +24,7 @@
 
 prog="<%= @docker_name %>"
 unshare=/usr/bin/unshare
-exec="/usr/bin/$prog"
+exec="/usr/bin/${prog}d"
 pidfile="/var/run/$prog.pid"
 lockfile="/var/lock/subsys/$prog"
 logfile="/var/log/$prog"
