Updating newrelic cookbook

--- a/cookbooks/newrelic/templates/default/agent/newrelic.yml.erb
+++ b/cookbooks/newrelic/templates/default/agent/newrelic.yml.erb
@@ -332,6 +332,28 @@ common: &default_settings
   labels: <%= @resource.labels %>
   <% end %>
 
+  <% if @resource.respond_to? :class_transformer_config %>
+  <% if @resource.class_transformer_config.empty? %>
+  #class_transformer:
+  #  classloader_blacklist: org.codehaus.groovy.runtime.callsite.CallSiteClassLoader, groovy.lang.GroovyClassLoader$InnerLoader
+  #  com.newrelic.instrumentation.akka-2.0:
+  #    enabled: false
+  <% else %>
+  class_transformer:
+    <% if @resource.class_transformer_config.key?('classloader_blacklist') %>
+    classloader_blacklist: <%= @resource.class_transformer_config['classloader_blacklist'].join(', ') %>
+    <% end %>
+    <% if @resource.class_transformer_config.key?('instrumentation_classes') %>
+      <% @resource.class_transformer_config['instrumentation_classes'].each do |class_to_config, config| %>
+    com.newrelic.instrumentation.<%= class_to_config %>:
+        <% config.each do |key, value| %>
+      <%= key %>: <%= value %>
+        <% end %>
+      <% end %>
+    <% end %>
+  <% end %>
+  <% end %>
+
   #============================== Browser Monitoring ===============================
   # New Relic Real User Monitoring gives you insight into the performance real users are
   # experiencing with your website. This is accomplished by measuring the time it takes for
