Updating docker cookbook to 1.13.0

--- a/cookbooks/docker/templates/default/upstart/docker.conf.erb
+++ b/cookbooks/docker/templates/default/upstart/docker.conf.erb
@@ -34,7 +34,7 @@ end script
 
 script
     # modify these in /etc/default/$UPSTART_JOB (/etc/default/docker)
-    DOCKER=/usr/bin/dockerd
+    DOCKER=<%= @dockerd_bin_link %>
     DOCKER_OPTS=
     if [ -f /etc/default/$UPSTART_JOB ]; then
         . /etc/default/$UPSTART_JOB
