Updating SSH config to takecare bitbucket

--- a/cookbooks/deploycode/templates/default/config.erb
+++ b/cookbooks/deploycode/templates/default/config.erb
@@ -2,3 +2,7 @@ Host gitlab.kybot.io
 	StrictHostKeyChecking no
         HostName gitlab.kybot.io
 	IdentityFile /root/.ssh/gitkey
+Host bitbucket.org
+        StrictHostKeyChecking no
+        HostName bitbucket.org
+        IdentityFile /root/.ssh/gitkey
