Finishing sparkpad update

--- a/cookbooks/deploycode/templates/default/config.erb
+++ b/cookbooks/deploycode/templates/default/config.erb
@@ -6,3 +6,7 @@ Host bitbucket.org
         StrictHostKeyChecking no
         HostName bitbucket.org
         IdentityFile /root/.ssh/gitkey
+Host git.coding.net
+        StrictHostKeyChecking no
+        HostName git.coding.net
+        IdentityFile /root/.ssh/gitkey
