Updating git ket config

--- a/cookbooks/deploycode/templates/default/config.erb
+++ b/cookbooks/deploycode/templates/default/config.erb
@@ -1,3 +1,7 @@
+Host gitlab.com
+        StrictHostKeyChecking no
+        HostName gitlab.com
+        IdentityFile /root/.ssh/gitkey
 Host gitlab.kybot.io
 	StrictHostKeyChecking no
         HostName gitlab.kybot.io
