Removing double quote for clusterWorkerNodeCount

--- a/cookbooks/azure/templates/default/deploywithcluster_cn.parameters.json.erb
+++ b/cookbooks/azure/templates/default/deploywithcluster_cn.parameters.json.erb
@@ -21,7 +21,7 @@
       "value": "<%= @clusterVersion %>"
     },
     "clusterWorkerNodeCount": {
-      "value": "<%= @clusterWorkerNodeCount %>"
+      "value": <%= @clusterWorkerNodeCount %>
     },
     "containerName": {
       "value": "<%= @containerName %>"
