Updating deploywithcluster template to be available to be used for both CN and global

--- a/cookbooks/azure/templates/default/backup/deploywithcluster.parameters.json.erb
+++ b/cookbooks/azure/templates/default/backup/deploywithcluster.parameters.json.erb
@@ -17,14 +17,8 @@
     "clusterType": {
       "value": "<%= @clusterType %>"
     },
-    "clusterVersion": {
-      "value": "<%= @clusterVersion %>"
-    },
     "clusterWorkerNodeCount": {
-      "value": <%= @clusterWorkerNodeCount %>
-    },
-    "containerName": {
-      "value": "<%= @containerName %>"
+      "value": "<%= @clusterWorkerNodeCount %>"
     },
     "edgeNodeSize": {
       "value": "<%= @edgeNodeSize %>"
@@ -40,9 +34,6 @@
     },
     "sshPassword": {
       "value": "<%= @sshPassword %>"
-    },
-    "storageAccount": {
-      "value": "<%= @storageAccount %>"
     }
   }
 }
