--- a/cookbooks/azure/templates/default/deploywithcluster.json.erb
+++ b/cookbooks/azure/templates/default/deploywithcluster.json.erb
@@ -48,7 +48,7 @@
     },
     "location": {
       "type": "string",
-      "defaultValue": "eastasia",
+      "defaultValue": "chinaeast",
       "allowedValues": [
         "chinaeast",
         "chinanorth",
@@ -103,7 +103,10 @@
       },
       "defaultValue": "3.5",
       "allowedValues": [
-        "3.5"
+        "3.5",
+        "3.4",
+        "3.3",
+        "3.2"
       ]
     },
     "clusterWorkerNodeCount": {
@@ -157,7 +160,11 @@
     "clusterApiVersion": "2015-03-01-preview",
     "clusterStorageAccountName": "[concat(parameters('clusterName'),'store')]",
     "applicationName": "KAP",
-    "galleryPackageIdentity": "Kyligence"
+    "galleryPackageIdentity": "Kyligence",
+    "sqlDatabase": {
+      "serverName": "[concat(parameters('clusterName'),'dbserver')]",
+      "databaseName": "[concat(parameters('clusterName'),'db')]"
+    }
   },
   "resources": [
     {
@@ -172,12 +179,63 @@
       }
     },
     {
+      "name": "[variables('sqlDatabase').serverName]",
+      "type": "Microsoft.Sql/servers",
+      "location": "[resourceGroup().location]",
+      "tags": {
+        "displayName": "SqlServer"
+      },
+      "apiVersion": "2014-04-01",
+      "dependsOn": [],
+      "properties": {
+        "administratorLogin": "[parameters('clusterLoginUserName')]",
+        "administratorLoginPassword": "[parameters('clusterLoginPassword')]",
+        "version": "12.0"
+      },
+      "resources": [
+        {
+          "name": "[variables('sqlDatabase').databaseName]",
+          "type": "databases",
+          "location": "[resourceGroup().location]",
+          "tags": {
+            "displayName": "Database"
+          },
+          "apiVersion": "2015-05-01-preview",
+          "dependsOn": [
+            "[variables('sqlDatabase').serverName]"
+          ],
+          "properties": {
+            "edition": "Basic",
+            "collation": "SQL_Latin1_General_CP1_CI_AS",
+            "maxSizeBytes": "1073741824",
+            "requestedServiceObjectiveName": "Basic"
+          }
+        },
+        {
+          "name": "AllowAllAzureIps",
+          "type": "firewallrules",
+          "location": "[resourceGroup().location]",
+          "apiVersion": "2014-04-01",
+          "dependsOn": [
+            "[variables('sqlDatabase').serverName]"
+          ],
+          "properties": {
+            "startIpAddress": "0.0.0.0",
+            "endIpAddress": "0.0.0.0"
+          }
+        }
+      ]
+    },
+    {
       "name": "[parameters('clusterName')]",
       "type": "Microsoft.HDInsight/clusters",
       "location": "[parameters('location')]",
       "apiVersion": "[variables('clusterApiVersion')]",
       "dependsOn": [
-        "[concat('Microsoft.Storage/storageAccounts/',parameters('storageAccount'))]"
+        "[concat('Microsoft.Storage/storageAccounts/',parameters('storageAccount'))]",
+        "[concat('Microsoft.Sql/servers/', variables('sqlDatabase').serverName)]",
+        "[variables('sqlDatabase').databaseName]",
+        "AllowAllAzureIps"
       ],
       "tags": {},
       "properties": {
@@ -187,9 +245,23 @@
           "kind": "[parameters('clusterType')]",
           "configurations": {
             "gateway": {
-              "restAuthCredential.isEnabled": false,
+              "restAuthCredential.isEnabled": true,
               "restAuthCredential.username": "[parameters('clusterLoginUserName')]",
               "restAuthCredential.password": "[parameters('clusterLoginPassword')]"
+            },
+            "hive-site": {
+              "javax.jdo.option.ConnectionDriverName": "com.microsoft.sqlserver.jdbc.SQLServerDriver",
+              "javax.jdo.option.ConnectionURL": "[concat('jdbc:sqlserver://', variables('sqlDatabase').serverName, '<% if @accountregion.eql?("china") %><%= ".database.chinacloudapi.cn" %><% else %><%= ".database.windows.net" %><% end %>', ';databaseName=', variables('sqlDatabase').databaseName, ';')]",
+              "javax.jdo.option.ConnectionUserName": "[concat(parameters('clusterLoginUserName'), '@', variables('sqlDatabase').serverName)]",
+              "javax.jdo.option.ConnectionPassword": "[parameters('clusterLoginPassword')]"
+            },
+            "hive-env": {
+              "hive_database": "Existing MSSQL Server database with SQL authentication",
+              "hive_database_name": "[variables('sqlDatabase').databaseName]",
+              "hive_database_type": "mssql",
+              "hive_existing_mssql_server_database": "[variables('sqlDatabase').databaseName]",
+              "hive_existing_mssql_server_host": "[concat(variables('sqlDatabase').serverName, '<% if @accountregion.eql?("china") %><%= ".database.chinacloudapi.cn" %><% else %><%= ".database.windows.net" %><% end %>')]",
+              "hive_hostname": "[concat(variables('sqlDatabase').serverName, '<% if @accountregion.eql?("china") %><%= ".database.chinacloudapi.cn" %><% else %><%= ".database.windows.net" %><% end %>')]"
             }
           }
         },
@@ -265,7 +337,16 @@
             ]
           }
         ],
-        "uninstallScriptActions": [],
+        "uninstallScriptActions": [
+          {
+            "name": "[concat('KAP-uninstall-v0','-' ,uniquestring(variables('applicationName')))]",
+            "uri": "https://raw.githubusercontent.com/Kyligence/Iaas-Applications/master/KAP/scripts/KAP_uninstall_v0.sh",
+            "parameters": "[parameters('appType')]",
+            "roles": [
+              "edgenode"
+            ]
+          }
+        ],
         "httpsEndpoints": [
           {
             "subDomainSuffix": "kap",
