Trouble shooting template error

--- a/cookbooks/azure/templates/default/storageaccount.json.erb
+++ b/cookbooks/azure/templates/default/storageaccount.json.erb
@@ -20,6 +20,7 @@
       "defaultValue": "standardsa"
     }
   },
+  "variables": {},
   "resources": [
     {
       "type": "Microsoft.Storage/storageAccounts",
