--- a/cookbooks/azure/templates/default/sqlserver.json.erb
+++ b/cookbooks/azure/templates/default/sqlserver.json.erb
@@ -54,7 +54,7 @@
             "name": "[parameters('virtualMachinesname')]",
             "createOption": "FromImage",
             "vhd": {
-              "uri": "[concat('https://nexusmvnrepodisks761', '<% if @accountregion.eql?("china") %><%= ".blob.core.chinacloudapi.cn" %><% else %><%= ".blob.core.windows.net" %><% end %>', '/vhds/', parameters('virtualMachinesname'),'20170503153620.vhd')]"
+              "uri": "[concat('https://', '<%= @storageAccountName %>', '<% if @accountregion.eql?("china") %><%= ".blob.core.chinacloudapi.cn" %><% else %><%= ".blob.core.windows.net" %><% end %>', '/vhds/', parameters('virtualMachinesname'),'20170503153620.vhd')]"
             },
             "caching": "ReadWrite"
           },
@@ -64,7 +64,7 @@
               "name": "[concat(parameters('virtualMachinesname'),'-disk-1')]",
               "createOption": "Empty",
               "vhd": {
-                "uri": "[concat('https://nexusmvnrepodisks761', '<% if @accountregion.eql?("china") %><%= ".blob.core.chinacloudapi.cn" %><% else %><%= ".blob.core.windows.net" %><% end %>', '/vhds/', parameters('virtualMachinesname'),'-disk-1-20170503153620.vhd')]"
+                "uri": "[concat('https://', '<%= @storageAccountName %>', '<% if @accountregion.eql?("china") %><%= ".blob.core.chinacloudapi.cn" %><% else %><%= ".blob.core.windows.net" %><% end %>', '/vhds/', parameters('virtualMachinesname'),'-disk-1-20170503153620.vhd')]"
               },
               "caching": "ReadOnly",
               "diskSizeGB": 1023
