--- a/cookbooks/azure/templates/default/sqlserver.parameters.json.erb
+++ b/cookbooks/azure/templates/default/sqlserver.parameters.json.erb
@@ -3,16 +3,16 @@
   "contentVersion": "1.0.0.0",
   "parameters": {
     "virtualMachinesname": {
-      "value": "<%= @virtualMachinesname %>"
+      "value": "<%= @sqlvirtualMachinesname %>"
     },
-    "networkInterfacesname": {
-      "value": "<%= @networkInterfacesname %>"
+    "sqlnetworkInterfacesname": {
+      "value": "<%= @sqlnetworkInterfacesname %>"
     },
-    "networkSecurityGroupsname": {
-      "value": "<%= @networkSecurityGroupsname %>"
+    "sqlnetworkSecurityGroupsname": {
+      "value": "<%= @sqlnetworkSecurityGroupsname %>"
     },
-    "publicIPAddressesipname": {
-      "value": "<%= @publicIPAddressesipname %>"
+    "sqlpublicIPAddressesipname": {
+      "value": "<%= @sqlpublicIPAddressesipname %>"
     },
     "vnetname": {
       "value": "<%= @vnetname %>"
