--- a/cookbooks/azure/templates/default/sqlserver.parameters.json.erb
+++ b/cookbooks/azure/templates/default/sqlserver.parameters.json.erb
@@ -14,8 +14,8 @@
     "sqlpublicIPAddressesipname": {
       "value": "<%= @sqlpublicIPAddressesipname %>"
     },
-    "vnetname": {
-      "value": "<%= @vnetname %>"
+    "vnetName": {
+      "value": "<%= @vnetName %>"
     },
     "subnet1Name": {
       "value": "<%= @subnet1Name %>"
