--- a/cookbooks/azure/templates/default/sqlserver.json.erb
+++ b/cookbooks/azure/templates/default/sqlserver.json.erb
@@ -164,7 +164,7 @@
     },
     {
       "type": "Microsoft.Network/virtualNetworks",
-      "name": "[parameters('sqlnetworkInterfacesname')]",
+      "name": "[parameters('vnetName')]",
       "apiVersion": "2016-03-30",
       "location": "[resourceGroup().location]",
       "properties": {
